# Skybound-2.0

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  README.md  constants.py  gen_enemies.py  gen_icons.py  gen_player.py  main.py  pixlib.py  pyproject.toml  requirements.txt  skybound.spec
.github/workflows/: ci.yml
gameloop/: loop.py
imgs/: Bosssheet.json  Jumpersheet.json  Mobsheet.json  Patrolsheet.json  Playersheet.json  Shootersheet.json
levels/: level1.py  themes.py
sprites/: base.py  goal.py  mob.py  mob_types.py  pausebutton.py  platform.py  player.py  powerups.py
tests/: conftest.py  test_cosmetics.py  test_database_logic.py  test_effects.py  test_jump_feel.py  test_level_gen.py  test_mobs.py  test_platform_collision.py  test_powerups.py  test_settings_store.py  test_sprites.py  test_spritesheet.py  test_themes.py  test_upgrades.py
txts/: achievements.json
utils/: achievements.py  cosmetics.py  daily.py  database_logic.py  draw_text.py  effects.py  player_stats.py  save_manager.py  settings_store.py  sound_effects.py  spritesheet.py  upgrades.py
windows/: achievements.py  gameover.py  main_menu.py  new_highscore_screen.py  paus.py  settings.py  shop.py  start.py
