[project]
name = "skybound"
version = "2.0.0"
description = "A 2D platformer built with Python and Pygame with procedural level generation, multiple enemy characters, multiple states, power-ups and achievements."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pygame-ce>=2.5",
    "numpy",
]

[dependency-groups]
build = [
    "pyinstaller==6.12.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Revival baseline: catch genuine bugs (syntax errors, undefined names,
# redefinitions), not style churn. Broaden this set in a later dedicated
# cleanup pass once the codebase is modernised.
select = ["E9", "F"]
ignore = [
    "F401",  # unused imports — pervasive via `import *`, clean up later
    "F403",  # `import *` is used pervasively; migrate away incrementally
    "F405",  # name may be undefined due to `import *`
    "F841",  # unused locals — mostly blocking screen-constructor side effects
    "F541",  # f-string without placeholders — cosmetic
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = false
